# ASTRA

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  KNOWMORE.md  LICENSE  MANIFEST.in  README.md  REMEDIATION.md  REMEDIATION_SUMMARY.md  TASKS.md  clean_comments.py  clean_comments_v2.py  debug_import.py  master-prompt.txt  pyproject.toml  repro_attr.py
.github/workflows/: publish-pypi.yml  python-app.yml
ASTRA-Core/: README.md  pyproject.toml
ASTRA-Core/ASTRA-Core-Docs/: 01_project_overview.md  02_architecture.md  03_library_design.md  04_module_specifications.md  05_data_models.md  06_algorithm_design.md  07_external_dependencies.md  08_performance_constraints.md  09_api_design.md  10_error_handling.md  11_testing_strategy.md  12_code_style.md  13_build_plan.md  14_future_extensions.md
ASTRA-Core/astra/: __init__.py  _probe_skyfield.py  cdm.py  conjunction.py  constants.py  data.py  debris.py  errors.py  models.py  orbit.py  plot.py  time.py  tle.py  visibility.py
ASTRA-Core/tests/: conftest.py  integration_legacy.txt  test_conjunction.py  test_covariance.py  test_debris.py  test_tle.py  test_utils.py
acc-test/: benchmark_accuracy.py  hist_out.txt  out.txt  test_14_day_staleness.py  test_historical_accuracy.py  test_real_tracking.py
astra/: __init__.py  _numba_compat.py  cdm.py  config.py  conjunction.py  constants.py  covariance.py  data.py  data_pipeline.py  debris.py  errors.py  frames.py  jdutil.py  log.py  maneuver.py  models.py  ocm.py  omm.py  orbit.py  plot.py  propagator.py  py.typed  spacebook.py  spacetrack.py  spatial_index.py  time.py  tle.py  utils.py  version.py  visibility.py
astra_core_engine-3.1.2/astra/: plot.py
astra_core_engine-3.3.0/astra/: time.py
backend/: main.py  requirements.txt
backend/app/analysis/: congestion.py  conjunction.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/data/: tle_parser.py
backend/app/database/: connection.py  schema.py
backend/app/filtering/: pipeline.py
backend/app/models/: schemas.py
backend/app/orbit/: coordinates.py  propagator.py
backend/app/utils/: helpers.py
docs/: 01_project_overview.md  02_system_architecture.md  03_data_model_and_processing.md  04_backend_api_specs.md  05_frontend_UI_UX_specs.md  06_deployment_and_devops.md  07_development_phases.md  08_orbital_computation_guidelines.md  Makefile  api.rst  architecture.rst  conf.py  generate_api.py  index.rst  installation.rst  limitations.rst  make.bat  quickstart.rst  requirements.txt  spacebook_api_reference.md  spacebook_schema_notes.md  theory.rst
docs/_build/: api.html  genindex.html  limitations.html  maneuvers.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  architecture.doctree  environment.pickle  index.doctree  installation.doctree  theory.doctree
docs/_build/.doctrees/apidoc/: astra.cdm.doctree  astra.conjunction.doctree  astra.covariance.doctree  astra.data.doctree  astra.data_pipeline.doctree  astra.debris.doctree  astra.jdutil.doctree  astra.maneuver.doctree  astra.models.doctree  astra.omm.doctree  astra.plot.doctree  astra.propagator.doctree  astra.spacetrack.doctree  astra.spatial_index.doctree  astra.time.doctree  astra.tle.doctree  astra.utils.doctree  astra.version.doctree  astra.visibility.doctree  modules.doctree
docs/_build/_sources/: api.rst.txt  architecture.rst.txt  index.rst.txt  installation.rst.txt  limitations.rst.txt  maneuvers.rst.txt  quickstart.rst.txt
docs/_build/apidoc/: astra.cdm.html  astra.config.html  astra.conjunction.html  astra.constants.html  astra.covariance.html  astra.errors.html  astra.html  astra.jdutil.html  astra.log.html  astra.maneuver.html  astra.models.html  astra.omm.html  astra.orbit.html  astra.propagator.html  astra.spacetrack.html  astra.spatial_index.html  astra.time.html  astra.tle.html  astra.utils.html  astra.version.html  modules.html
docs/_build/html/: .buildinfo  api.html  architecture.html  genindex.html  index.html  installation.html  limitations.html  maneuvers.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  theory.html
docs/_static/: .gitkeep
examples/: 01_basic_conjunctions.py  02_visualize_swarm.py  03_ground_station_visibility.py  04_omm_pipeline.py  05_compare_tle_omm.py  06_spacetrack_pipeline.py  07_spacebook_pipeline.py
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AnalyticsPanel.jsx  FilterPanel.jsx  Globe.jsx  SatelliteRenderer.jsx  Starfield.jsx  TimelineSlider.jsx
graph/: astra-graph-clean.mmd  astra_flow_graph.md
paper/: paper.bib  paper.md
tests/: benchmark_spatial_optimization.py  conftest.py  test_audit_findings_3_8.py  test_audit_hardening.py  test_audit_remediation.py  test_build_segments.py  test_cara_replay.py  test_cdm.py  test_chebyshev.py  test_conjunction.py  test_covariance.py  test_critical_audit_fixes.py  test_ct_a_ephemeris_accuracy.py  test_data.py  test_debris.py  test_errors.py  test_kdtree_benchmark.py  test_maneuver_hohmann.py  test_new_defect_fixes.py  test_omm.py  test_orbit.py  test_p2_3_overlapping_burns.py  test_p2_4_cdm_validation.py  test_p2_5_mass_safety.py  test_p2_6_spatial_concurrency.py  test_p2_7_tle_strictness.py  test_p2_8_tle_staleness.py  test_phy_d_penumbra_smoothness.py  test_pipeline_smoke.py  test_plot.py  test_production_audit.py  test_propagator_batch.py  test_regression_audit.py  test_se_a_batch_consistency.py  test_se_c_omm_decay.py  test_spacetrack.py  test_sprint3_coverage.py  test_srp_shadow_upgrade.py  test_sterling.py  test_strict_mode.py  (+9 more)
tools/: benchmark_accuracy.py  check_celestrak_health.py  explore_spacebook_apis.py  test_sgp4_attrs.py  test_spacebook_client.py  test_stk_cov.py  test_sw_priority.py  test_xptle_to_omm.py  validate_supgp_sample.py
tools/spacebook_samples/: eop_full.txt  eop_recent.txt  iss_covariance_plotly.json  iss_guid.txt  iss_synthetic_covariance.json  spaceweather_full.txt  spaceweather_recent.txt  xp_tle_catalog.txt
(+148 files in other folders)
