[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-core-engine"
version = "3.1.1"
authors = [
  { name="ASTRA Team - Ishan Tare" },
]
description = "Autonomous Space Traffic Risk Analyzer - Computation Engine"
readme = "README.md"
keywords = [
    "astrodynamics", "orbital-mechanics", "space-situational-awareness", 
    "satellite", "sgp4", "skyfield", "tle", "orbit-propagation", "space-debris", 
    "cowell-method", "conjunction-analysis", "aerospace"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "skyfield>=1.46",
    "sgp4>=2.23",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "numba>=0.59.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
