[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-core-engine"
version = "3.6.0"
authors = [
  { name="Ishan Tare" },
]
description = "Autonomous Space Traffic Risk Analyzer - Computation Engine with native TLE, OMM, and Space-Track support"
readme = "README.md"
keywords = [
    "astrodynamics", "orbital-mechanics", "space-situational-awareness", 
    "satellite", "sgp4", "skyfield", "tle", "omm", "ccsds", "space-track",
    "orbit-propagation", "space-debris", "cowell-method", "conjunction-analysis", "aerospace"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.5,<2.3.0",
    "scipy>=1.11.0",
    "skyfield>=1.46",
    "sgp4>=2.23",
    "requests>=2.31.0",
    "numba>=0.59.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
viz = ["plotly>=5.18.0"]
test = ["pytest>=8.0.0", "mypy>=1.10.0", "flake8", "plotly>=5.18.0", "scipy-stubs", "types-requests", "types-defusedxml"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["paper*", "docs*"]

[tool.setuptools.package-data]
astra = ["py.typed"]

[tool.mypy]
strict = false
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = false
warn_return_any = false
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = ["assignment", "operator"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "-o",
    "cache_dir=tests/.astra-test-cache/pytest-cache",
]
markers = [
    "integration: tests that exercise multiple public modules together",
    "network: tests that require live external services and must be opt-in",
    "physics: numerical physics regression tests with calibrated tolerances",
    "plot: visualization tests that require Plotly",
    "slow: tests that are intentionally slower than normal unit tests",
]
