[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra"
version = "2.0.0"
authors = [
  { name="ASTRA Team" },
]
description = "Autonomous Space Traffic Risk Analyzer - Computation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "skyfield>=1.46",
    "sgp4>=2.23",
    "plotly>=5.18.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
